Fixed course spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -80,7 +80,6 @@
           background: var(--ivy-lightGrey);
         }
         .editForm{
-          margin-top: 175px;
           margin-left: 20px;
           padding: 10px 10px 10px 10px
         }
